<?xml version="1.0"?>
<package format="2">
  <name>fulanghua_waypoints_nav</name>
  <version>0.0.1</version>
  <description>The fulanghua_waypoints package</description>

  <maintainer email="method_aspect_card@yahoo.co.jp">Daiki Maekawa</maintainer>
  <author>Daiki Maekawa</author>
  <url type="website">http://wiki.ros.org/fulanghua_waypoints_nav</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>move_base_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base</depend>
  <depend>roscpp</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>tf</depend>
  <depend>std_srvs</depend>
  <depend>fulanghua_action</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>orne_waypoints_msgs</depend>
  <depend>sound_play</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>camera_action</depend>
  <depend>fulanghua_msg</depend>
  <depend>fulanghua_srvs</depend>
  <depend>unitree_legged_msgs</depend>
  
  
  <!-- <run_depend>fulanghua_srvs</run_depend> -->

  <export>
  </export>
</package>
